// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image > find the image without accent color 1`] = `
<DocumentFragment>
  <svg
    fill="none"
    viewBox="0 0 208 105"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M133.017 68.66l11.586-11.587a6.048 6.048 0 0 0 0-8.554l-35.282-35.281a6.048 6.048 0 0 0-8.553 0L65.486 48.519a6.048 6.048 0 0 0 0 8.554l35.282 35.282a6.048 6.048 0 0 0 8.553 0l12.355-12.356m6.805-6.804l-2.684 2.683M91 42.527h27.501"
      stroke="#DE5846"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M107.697 38.598h-5.893a1.964 1.964 0 0 0-1.965 1.964v1.964h9.822v-1.964a1.962 1.962 0 0 0-1.964-1.964z"
      stroke="#DE5846"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M113.74 64.297a1.966 1.966 0 0 1-1.957 1.802H97.719a1.964 1.964 0 0 1-1.957-1.802l-1.815-21.77h21.607l-1.814 21.77z"
      fill="#FFF5F2"
      stroke="#DE5846"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M101.804 59.224v-9.822m5.893 9.822v-9.822"
      stroke="#DE5846"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M91.058 16.533l7.571-7.571a9.072 9.072 0 0 1 12.83 0l37.421 37.42a9.074 9.074 0 0 1 0 12.83l-37.421 37.42a9.071 9.071 0 0 1-12.83 0l-37.42-37.42a9.072 9.072 0 0 1 0-12.83l13.595-13.595m13.23-13.23l-9.828 9.828"
      stroke="#DBDEE5"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
    <path
      d="M30.546 16.545h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66.002-.002h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm103.883-.003h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-43.002 87.999h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm65.999 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-21.999h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm.001-66h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-.001 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7z"
      fill="#DBDEE5"
    />
  </svg>
</DocumentFragment>
`;

exports[`Image > should render 1`] = `<DocumentFragment />`;

exports[`Image > should render in dark mode 1`] = `
<DocumentFragment>
  <svg
    viewBox="0 0 342 271.163"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      id="images"
      transform="translate(-538 -150.837)"
    >
      <path
        d="M690 277v-10.818s-1.592-7.852-8.156-8.055-29.03 0-29.03 0 1.442 2.592 1.427 3.963 0 14.91 0 14.91z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 280"
        fill="#3c4249"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_280"
      />
      <path
        d="M793.467 374.061h22.694s.228-6.166-1.243-8.012-3.771-5.35-5.328-5.465a26.679 26.679 0 0 1-5.158-1.59h-2.355v-41.273s-3.68 7.1-8.879 9.367a25.528 25.528 0 0 1-10.1 2.066s.512 9.477-.81 12.8a123.732 123.732 0 0 1-6.216 12.328c-.843 1.248-.613 1.844 1.326 1.883a20.1 20.1 0 0 1 8.959 2.564c2.934 1.822 6.744 4.963 7.108 8.363s.77 4.033.72 4.543a21.419 21.419 0 0 1-.718 2.426z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 306"
        fill="#3c4249"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_306"
      />
      <path
        d="M802.246 236.119s-.7-10.559 2.294-14.48 11.878-14.135 12.492-19.562 1.9-11.973 0-14.654-5.534-2.15-6.438-2.014 3.21 8.9-3.618 18.715-18.238 15-19.254 15.463-3.163 1.664 0 2.564 8.58 4.707 10.362 7.707 4.162 6.261 4.162 6.261z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 304"
        fill="#3c4249"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_304"
      />
      <path
        d="M602 422v-20h-38v10h-2v-10h-24v-2h24v-38h-24v-2h24v-18h2v18h3v2h-3v38h38v-18h2v18h23v2h-23v20zm39-16v-4h-4v-2h4v-4h2v4h4v2h-4v4zm211-13v-19h-87v19h-2v-19h-5v-2h5v-39h2v39h87v-39h-4v-2h4v-38h-4v-2h4v-23h2v23h6v2h-6v38h26v2h-26v39h26v2h-26v19zm-19-56v-4h-4v-2h4v-4h2v4h4v2h-4v4zm-271-1v-4h-4v-2h4v-4h2v4h4v2h-4v4zm290-78v-4h-4v-2h4v-4h2v4h4v2h-4v4z"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 12"
        fill="#3c4249"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_12"
      />
      <path
        d="M739.294 374.092H629.842"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 303"
        fill="none"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_303"
        stroke="#3c4249"
        stroke-linecap="round"
        stroke-width="2"
      />
      <path
        d="M817.321 189.379c-.837 2.605-4.231-1.129-4.171-3.547s5.008.941 4.171 3.547z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 301"
        fill="#289548"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_301"
      />
      <g
        data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 3"
        fill="none"
        id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_3"
        stroke="#7e8a9c"
        stroke-linecap="round"
        stroke-width="2"
      >
        <path
          d="M700 276c14.291-19.543 41-36.6 41-69s12.474-37.739 19-41c1.433-.716 5.45-10.043 6-12s3.566-3.662 6 0c2.178 3.277 5 8 5 8s24.327.031 33 23c.4 1.049 4.644-.141 6 1s6.216 15.259-7 30c-3.174 3.541-7 6.3-7 22v121s14-.269 14 13v1h-16"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1142"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1142"
        />
        <path
          d="M764.243 297.432A44.144 44.144 0 0 1 783 334c0 8.994-3.341 14.763-7.887 21.793"
          data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3695"
          id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3695"
        />
        <path
          d="M775 356c6.706 0 17.2 2.292 19 14a16.582 16.582 0 0 1 0 3l-27.975.092"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1143"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1143"
        />
        <path
          d="M810.114 185.234S818.44 209.781 779 223"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1144"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1144"
        />
        <path
          d="M758.895 166.713S764.456 165.3 767 163"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1145"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1145"
        />
        <path
          d="M802 246s-5.014-12-17-15"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1146"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1146"
          transform="translate(0 -10)"
        />
        <path
          d="M746.637 276.822c-2.705-3.929-4.687-11.811-2.637-17.822"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1148"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1148"
        />
        <path
          d="M798.89 182.4s-2.6-2.2-8.058 0"
          data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 302"
          id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_302"
        />
        <path
          d="M783 329.428s15.492-.463 19-13.09"
          data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 305"
          id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_305"
        />
      </g>
      <path
        d="M654 277h100a10 10 0 0 1 10 10v77"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970"
        stroke="#3c4249"
        stroke-width="2"
      />
      <path
        d="M597 278v-16a10 10 0 0 1 10-10h37a10 10 0 0 1 10 10v16"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F"
        stroke="#3c4249"
        stroke-width="2"
      />
      <path
        d="M653 258h27a10 10 0 0 1 10 10v10"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
        stroke="#3c4249"
        stroke-width="2"
      />
      <path
        d="M654 277h100a10 10 0 0 1 10 10v26m-167 51v-86"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
        stroke="#3c4249"
        stroke-linecap="round"
        stroke-width="2"
      />
      <g
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
        stroke="none"
      >
        <path
          d="M712 322v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4zm60-4v-4h4v4zm-56 0v-4h4v4zm60-4v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4z"
        />
        <path
          d="M716 322h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-56 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4z"
          fill="#7e8a9c"
        />
      </g>
      <path
        d="M671 341h24"
        data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1"
        fill="none"
        id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1"
        stroke="#7e8a9c"
        stroke-width="2"
      />
      <path
        d="M613.617 357H646.5a8.5 8.5 0 0 1 0 17h-53a8.5 8.5 0 0 1 0-17h2.587"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 971"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_971"
        stroke="#7e8a9c"
        stroke-width="2"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Image > should render nothing if image can't be found 1`] = `<DocumentFragment />`;

exports[`Image > should render with domain 1`] = `
<DocumentFragment>
  <svg
    viewBox="0 0 342 271.163"
    xmlns="http://www.w3.org/2000/svg"
  >
    <g
      id="images"
      transform="translate(-538 -150.837)"
    >
      <path
        d="M690 277v-10.818s-1.592-7.852-8.156-8.055-29.03 0-29.03 0 1.442 2.592 1.427 3.963 0 14.91 0 14.91z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 280"
        fill="#eef3f5"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_280"
      />
      <path
        d="M793.467 374.061h22.694s.228-6.166-1.243-8.012-3.771-5.35-5.328-5.465a26.679 26.679 0 0 1-5.158-1.59h-2.355v-41.273s-3.68 7.1-8.879 9.367a25.528 25.528 0 0 1-10.1 2.066s.512 9.477-.81 12.8a123.732 123.732 0 0 1-6.216 12.328c-.843 1.248-.613 1.844 1.326 1.883a20.1 20.1 0 0 1 8.959 2.564c2.934 1.822 6.744 4.963 7.108 8.363s.77 4.033.72 4.543a21.419 21.419 0 0 1-.718 2.426z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 306"
        fill="#dbdee5"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_306"
      />
      <path
        d="M802.246 236.119s-.7-10.559 2.294-14.48 11.878-14.135 12.492-19.562 1.9-11.973 0-14.654-5.534-2.15-6.438-2.014 3.21 8.9-3.618 18.715-18.238 15-19.254 15.463-3.163 1.664 0 2.564 8.58 4.707 10.362 7.707 4.162 6.261 4.162 6.261z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 304"
        fill="#dbdee5"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_304"
      />
      <path
        d="M602 422v-20h-38v10h-2v-10h-24v-2h24v-38h-24v-2h24v-18h2v18h3v2h-3v38h38v-18h2v18h23v2h-23v20zm39-16v-4h-4v-2h4v-4h2v4h4v2h-4v4zm211-13v-19h-87v19h-2v-19h-5v-2h5v-39h2v39h87v-39h-4v-2h4v-38h-4v-2h4v-23h2v23h6v2h-6v38h26v2h-26v39h26v2h-26v19zm-19-56v-4h-4v-2h4v-4h2v4h4v2h-4v4zm-271-1v-4h-4v-2h4v-4h2v4h4v2h-4v4zm290-78v-4h-4v-2h4v-4h2v4h4v2h-4v4z"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 12"
        fill="#dbdee5"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_12"
      />
      <path
        d="M739.294 374.092H629.842"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 303"
        fill="none"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_303"
        stroke="#dbdee5"
        stroke-linecap="round"
        stroke-width="2"
      />
      <path
        d="M817.321 189.379c-.837 2.605-4.231-1.129-4.171-3.547s5.008.941 4.171 3.547z"
        data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 301"
        fill="#289548"
        id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_301"
      />
      <g
        data-name="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430 3"
        fill="none"
        id="\\u0413\\u0440\\u0443\\u043F\\u043F\\u0430_3"
        stroke="#212225"
        stroke-linecap="round"
        stroke-width="2"
      >
        <path
          d="M700 276c14.291-19.543 41-36.6 41-69s12.474-37.739 19-41c1.433-.716 5.45-10.043 6-12s3.566-3.662 6 0c2.178 3.277 5 8 5 8s24.327.031 33 23c.4 1.049 4.644-.141 6 1s6.216 15.259-7 30c-3.174 3.541-7 6.3-7 22v121s14-.269 14 13v1h-16"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1142"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1142"
        />
        <path
          d="M764.243 297.432A44.144 44.144 0 0 1 783 334c0 8.994-3.341 14.763-7.887 21.793"
          data-name="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441 3695"
          id="\\u042D\\u043B\\u043B\\u0438\\u043F\\u0441_3695"
        />
        <path
          d="M775 356c6.706 0 17.2 2.292 19 14a16.582 16.582 0 0 1 0 3l-27.975.092"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1143"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1143"
        />
        <path
          d="M810.114 185.234S818.44 209.781 779 223"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1144"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1144"
        />
        <path
          d="M758.895 166.713S764.456 165.3 767 163"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1145"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1145"
        />
        <path
          d="M802 246s-5.014-12-17-15"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1146"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1146"
          transform="translate(0 -10)"
        />
        <path
          d="M746.637 276.822c-2.705-3.929-4.687-11.811-2.637-17.822"
          data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1148"
          id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1148"
        />
        <path
          d="M798.89 182.4s-2.6-2.2-8.058 0"
          data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 302"
          id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_302"
        />
        <path
          d="M783 329.428s15.492-.463 19-13.09"
          data-name="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440 305"
          id="\\u041A\\u043E\\u043D\\u0442\\u0443\\u0440_305"
        />
      </g>
      <path
        d="M654 277h100a10 10 0 0 1 10 10v77"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970"
        stroke="#dbdee5"
        stroke-width="2"
      />
      <path
        d="M597 278v-16a10 10 0 0 1 10-10h37a10 10 0 0 1 10 10v16"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F"
        stroke="#dbdee5"
        stroke-width="2"
      />
      <path
        d="M653 258h27a10 10 0 0 1 10 10v10"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 2"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_2"
        stroke="#dbdee5"
        stroke-width="2"
      />
      <path
        d="M654 277h100a10 10 0 0 1 10 10v26m-167 51v-86"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 970 \\u043A\\u043E\\u043F\\u0438\\u044F 3"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_970_\\u043A\\u043E\\u043F\\u0438\\u044F_3"
        stroke="#dbdee5"
        stroke-linecap="round"
        stroke-width="2"
      />
      <g
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A 1 \\u043A\\u043E\\u043F\\u0438\\u044F 6"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_1_\\u043A\\u043E\\u043F\\u0438\\u044F_6"
        stroke="none"
      >
        <path
          d="M712 322v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4zm60-4v-4h4v4zm-56 0v-4h4v4zm60-4v-4h4v4zm-8 0v-4h4v4zm-48 0v-4h4v4zm-8 0v-4h4v4z"
        />
        <path
          d="M716 322h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-56 0h-4v-4h4v4zm60-4h-4v-4h4v4zm-8 0h-4v-4h4v4zm-48 0h-4v-4h4v4zm-8 0h-4v-4h4v4z"
          fill="#212225"
        />
      </g>
      <path
        d="M671 341h24"
        data-name="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430 1"
        fill="none"
        id="\\u0424\\u0438\\u0433\\u0443\\u0440\\u0430_1"
        stroke="#212225"
        stroke-width="2"
      />
      <path
        d="M613.617 357H646.5a8.5 8.5 0 0 1 0 17h-53a8.5 8.5 0 0 1 0-17h2.587"
        data-name="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A, \\u0441\\u043A\\u0440\\u0443\\u0433\\u043B. \\u0443\\u0433\\u043B\\u044B 971"
        fill="none"
        id="\\u041F\\u0440\\u044F\\u043C\\u043E\\u0443\\u0433\\u043E\\u043B\\u044C\\u043D\\u0438\\u043A_\\u0441\\u043A\\u0440\\u0443\\u0433\\u043B._\\u0443\\u0433\\u043B\\u044B_971"
        stroke="#212225"
        stroke-width="2"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Image > should render with string 1`] = `
<DocumentFragment>
  <img
    alt=""
    loading="lazy"
    src="/src/domains/profile/images/welcome-modal-step-1-banner-light-green.png"
  />
</DocumentFragment>
`;
